testsuite/tests/parser/should_fail/NoBlockArgumentsFail3.stderr

NoBlockArgumentsFail3.hs:7:22: error: [GHC-06074]
    Unexpected \case expression in function application:
        \case Just 3 -> print x
    Suggested fixes:
      • Use parentheses.
      • Perhaps you intended to use the ‘BlockArguments’ extension
